--- a/public/a/css/main.css
+++ b/public/a/css/main.css
@@ -1,10 +1,14 @@
 html, body {
     height: 100%;
     background-image: url('../imgs/body-background.png');
+    /* Background pattern from subtlepatterns.com */
 }
     /*title section*/
 
     .title {
+        background: ##25bb8e;
+        background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");
+        background-repeat: repeat-x, repeat;
         height: 550px;
         background-color: #208A96;
     }
@@ -27,7 +31,10 @@ html, body {
     }
 
     .header {
-        background-image: linear-gradient(rgba(32, 138, 150, 0.71), #208A96);
+        background: ##25bb8e;
+        background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");
+        background-repeat: repeat-x, repeat;
+        /*background-image: linear-gradient(rgba(32, 138, 150, 0.71), #208A96);*/
         min-height: 5%;
         position: fixed;
     }
@@ -50,12 +57,13 @@ html, body {
     }
 
     .menu-list {
+        color: #eee;
         display: inline;
         margin-left: 70px;
         float: right;
     }
     .menu-list:hover{
-        color: #eee;
+        color: black;
         cursor: pointer;
     }
 
@@ -82,6 +90,7 @@ html, body {
     }
 
     .title-desc-both {
+        color: #eee;
         position: relative;
         left: 15%;
         top: 25%;
