--- a/public/a/css/iphone-l.css
+++ b/public/a/css/iphone-l.css
@@ -2,11 +2,11 @@
 
 	.header {
 		min-height: 15%;
-		opacity: 0.9;
 	}
 
 	.title {
-		height: 300px;
+		/*height: 300px;*/
+		height: 95%;
 	}
 
 	.logo {
@@ -20,7 +20,7 @@
 	.phone-menu {
 		display: block;
 		font-size: 2em;
-		margin-top: -7%;
+		margin-top: 3%;
 	}
 
 	.menu-header {
@@ -30,6 +30,10 @@
 		width: 100%;
 		margin-top: 0;
 		transform: rotate(180deg);
+	}
+
+	.navbar-default {
+		background: #191919;
 	}
 
 	.menu-list {
@@ -55,6 +59,16 @@
 	.lower-rect {
 		top: 19%;
 	}
+
+	#title-name {
+        width: auto;
+        font-size: 50px;
+    }
+
+    #title-wd {
+        width: auto;
+        font-size: 35px;
+    }
 
 	/*.rectangle {
 		top: 19%;
