--- a/public/a/css/main.css
+++ b/public/a/css/main.css
@@ -7,10 +7,15 @@ html, body {
 
     .title {
         background: ##25bb8e;
-        background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");
-        background-repeat: repeat-x, repeat;
-        height: 550px;
-        background-color: #208A96;
+        /*background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");*/
+        /*background-repeat: repeat-x, repeat;
+        /*height: 550px;/*
+        /*background-color: #208A96;*/
+        /*new stuff*/
+        height: 95%;
+        background-image: url("../imgs/title-bg.jpg");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
     }
 
     .row {
@@ -19,7 +24,8 @@ html, body {
     }
 
     .logo {
-        display: inline-block;
+        /*display: inline-block;*/
+        display: none;
         background-image: url('../imgs/logo.png');
         background-repeat: no-repeat;
         height: 56px;
@@ -31,19 +37,36 @@ html, body {
     }
 
     .header {
-        background: ##25bb8e;
-        background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");
+        /*background: #25bb8e;*/
+        /*background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");*/
         background-repeat: repeat-x, repeat;
         /*background-image: linear-gradient(rgba(32, 138, 150, 0.71), #208A96);*/
         min-height: 5%;
         position: fixed;
     }
 
+    .navbar {
+        border: 0;
+    }
+
+    .navbar-default {
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,45484d+100 */
+        /*background: #000000; /* Old browsers */
+        /*background: -moz-linear-gradient(top,  #000000 0%, #45484d 100%); /* FF3.6-15 */
+        /*background: -webkit-linear-gradient(top,  #000000 0%,#45484d 100%); /* Chrome10-25,Safari5.1-6 */
+        /*background: linear-gradient(to bottom,  #000000 0%,#45484d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#45484d',GradientType=0 ); /* IE6-9 */
+        /*border-color: #B3B2B2;*/
+        background: transparent;
+    }
+
     .phone-menu {
         display: none;
         position: absolute;
         margin-left: 85%;
-        margin-top: -12%;
+        margin-top: 5%;
+        color: #eee;
+        z-index: 1;
     }
 
     .header-text {
@@ -57,13 +80,13 @@ html, body {
     }
 
     .menu-list {
-        color: #eee;
+        color: #B3B2B2;
         display: inline;
         margin-left: 70px;
         float: right;
     }
     .menu-list:hover{
-        color: black;
+        color: #FFFFFF;
         cursor: pointer;
     }
 
@@ -86,17 +109,19 @@ html, body {
         width: 141px;
         position: relative;
         margin: auto;
-        top: 42%;
+        top: 45%;
     }
 
     .title-desc-both {
-        color: #eee;
+        /*color: #eee;*/
+        color: #151515;
         position: relative;
         left: 15%;
-        top: 25%;
+        top: 20%;
         height: 40%;
         width: 65%;
         visibility: hidden;
+        padding-bottom: 10px;
     }
 
     .title-desc {
@@ -106,12 +131,12 @@ html, body {
 
     #title-name {
         width: auto;
-        font-size: 50px;
+        font-size: 70px;
     }
 
     #title-wd {
         width: auto;
-        font-size: 35px;
+        font-size: 45px;
     }
 
     .rectangle {
@@ -126,10 +151,10 @@ html, body {
     }
 
     .top-rectangles {
-        background-image: url('../imgs/body-background.png');
+        /*background-image: url('../imgs/body-background1.png');*/
+        background-color: #151515;
         visibility: hidden;
     }
-
 
     .rectangle1 {
         left: 90%;
@@ -160,7 +185,7 @@ html, body {
 
     #about {
         position: absolute;
-        bottom: 32%;
+        bottom: 50px;
     }
 
     .about-section {
@@ -176,7 +201,7 @@ html, body {
     .about-inner-section {
         height: auto;
         width: 100%;
-        padding-top: 6%;
+        padding-top: 12%;
     }
 
     .sub-header {
