--- a/public/a/css/smaller-phones-p.css
+++ b/public/a/css/smaller-phones-p.css
@@ -2,7 +2,6 @@
 
 	.header {
 		min-height: 10%;
-		opacity: 0.9;
 	}
 
 	.title {
@@ -37,6 +36,10 @@
 		display: block;
 	}
 
+	.navbar-default {
+		background: #191919;
+	}
+
 	.menu-header {
 		margin-top: 0;
 		display: none;
@@ -61,6 +64,16 @@
 	.current {
 		border-style: none;
 	}
+
+	#title-name {
+        width: auto;
+        font-size: 50px;
+    }
+
+    #title-wd {
+        width: auto;
+        font-size: 35px;
+    }
 
 /*about section*/
 
