--- a/public/a/css/main.css
+++ b/public/a/css/main.css
@@ -6,14 +6,14 @@ html, body {
     /*title section*/
 
     .title {
-        background: #25bb8e;
+        /*background: #25bb8e;*/
         /*background-image: url("../imgs/ZenBG-1.png"), url("../imgs/ZenBG-2.png");*/
         /*background-repeat: repeat-x, repeat;
         /*height: 550px;/*
         /*background-color: #208A96;*/
         /*new stuff*/
         height: 95%;
-        background-image: url("../imgs/title-bg.jpg");
+        background-image: url("../imgs/title-bg1.jpg");
         background-size: 100% 100%;
         background-repeat: no-repeat;
     }
@@ -114,13 +114,12 @@ html, body {
 
     .title-desc-both {
         /*color: #eee;*/
-        color: #000000;
+        color: #eee;
         position: relative;
         left: 15%;
         top: 20%;
         height: 40%;
         width: 65%;
-        visibility: hidden;
         padding-bottom: 10px;
     }
 
@@ -154,6 +153,7 @@ html, body {
         /*background-image: url('../imgs/body-background1.png');*/
         background-color: #000000;
         visibility: hidden;
+        display: none;
     }
 
     .rectangle1 {
@@ -363,7 +363,7 @@ html, body {
         margin: auto;
         text-align: center;
     }
-    
+
     .github:hover {
         cursor: pointer;
         color: #4078c0;
@@ -444,6 +444,12 @@ html, body {
     }
     .form-button:hover{
         background-image: linear-gradient(rgba(32, 138, 150, 0.71), #208A96);
+    }
+
+    label {
+        margin-bottom: 2px;
+        margin-top: 5px;
+        margin-left: -10px;
     }
 
     /*footer section*/
